[package]
name = "portocheck"
version = "0.1.0"
authors = ["timthomasdev <tim.thomas@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "0.2.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0"
